--- a/public/css/new.css
+++ b/public/css/new.css
@@ -156,6 +156,7 @@ textarea {
     position: absolute;
     left: 1em;
     height: calc(100% - 1em);
+    width: unset;
 }
 
 .rec.recording .wrapper {
