--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,3 +1,20 @@
+header {
+    margin-top: env(safe-area-inset-top);
+    margin-right: env(safe-area-inset-right);
+    margin-left: env(safe-area-inset-bottom);
+}
+
+main {
+    margin-right: env(safe-area-inset-right);
+    margin-left: env(safe-area-inset-bottom);
+}
+
+footer {
+    margin-bottom: env(safe-area-inset-bottom);
+    margin-right: env(safe-area-inset-right);
+    margin-left: env(safe-area-inset-bottom);
+}
+
 @media only screen and (max-width: 767px) {
     main, footer {
         text-align: center;
@@ -34,3 +51,18 @@
         content: ""
     }
 }
+
+/* @media (prefers-color-scheme: dark) {
+    :root {
+        --bg: #1b1b1c;
+        --color: #e8e8e8;
+        --theme-color: #4bb1f4;
+        --post-bg: #1b1b1c;
+        --post-border: rgba(255, 255, 255, .3);
+        --normal-button-active-color: var(--post-border);
+    }
+
+    .doodle {
+        filter: invert(.9);
+    }
+} */
