--- a/public/views/post.ejs
+++ b/public/views/post.ejs
@@ -2,74 +2,95 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="/css/post.css">
-    <link rel="stylesheet" href="/css/index.css">
     <%- include ('fragments/global-head.ejs') %>
     <title><%= title %></title>
-    <style>
-        .posts-list {
-            width: var(--max-post-width);
-        }
-    </style>
 </head>
 <body>
 
     <%- include('fragments/header.ejs') %>
 
-    <main>
-        <div class="post">
-            <table>
-                <tr>
-                    <td>
-                        <a tabindex="0" onclick="history.back()">
-                            &lt;\--
-                        </a>
-                    </td>
-                    <td class="flex">
-                        <span class="grow">from <a href="/posts/<%= author_path %>"><em><%= author %></em></a> · <span class="date-relative"><%= timestamp %></span></span>
-                        <a href="/reply/<%= path %>">reply</a>
-                    </td>
-                </tr>
-                <% if (locals.replying_to) { %>
+    <div class="scroll-container">
+        <main>
+            <div class="post">
+                <table>
                     <tr>
-                        <td>re:</td>
+                        <td>
+                            <a tabindex="0" onclick="history.back()">
+                                &lt;\--
+                            </a>
+                        </td>
                         <td class="flex">
-                            <a class="grow" href="/posts/<%= replying_to.path %>"><%= replying_to.title %></a>
-                            <span>by <a href="/posts/<%= replying_to.author_path %>"><%= replying_to.author %></a></span>
+                            <span class="grow">from <a href="/posts/<%= author_path %>"><em><%= author %></em></a> · <span class="date-relative"><%= timestamp %></span></span>
+                            <a href="/reply/<%= path %>">reply</a>
                         </td>
                     </tr>
-                <% } %>
-            </table>
-            <% if (body != '') { %>
-                <div class="content">
-                    <%- body %>
-                </div>
-            <% } %>
-        </div>
-
-        <% if (locals.replies && replies.length > 0) { %>
-            <div class="posts-list">
-                <p>replies:</p>
-                <% for (let i=0; i<replies.length; i++) { %>
-                    <% let post = replies[i] %>
-                    <div class="indexed-post">
-                        <span><%= replies.length - i %></span>
-                        <a class="title" href="/posts/<%= post.path %>">
-                            <%= post.title %>
-                        </a>
-                        <a style="white-space: pre" href="/posts/<%= post.author_path %>"><em><%= post.author %></em></a>
-                        <span class="date"><%= post.timestamp %></span>
+                    <% if (locals.replying_to) { %>
+                        <tr>
+                            <td>re:</td>
+                            <td class="flex">
+                                <a class="grow" href="/posts/<%= replying_to.path %>"><%= replying_to.title %></a>
+                                <span>by <a href="/posts/<%= replying_to.author_path %>"><%= replying_to.author %></a></span>
+                            </td>
+                        </tr>
+                    <% } %>
+                </table>
+                <% if (body != '') { %>
+                    <div class="content">
+                        <%- body %>
                     </div>
                 <% } %>
             </div>
-        <% } %>
-    </main>
+    
+            <% if (locals.replies && replies.length > 0) { %>
+                <div><p style="font-family: monospace">replies:</p></div>
+                <% for (let i=0; i<replies.length; i++) { %>
+                    <% let post = replies[i] %>
+                    <div class="post">
+                        <table>
+                            <tr>
+                                <td>
+                                    <a href="/posts/<%= post.path %>" title="go to post">--/></a>
+                                </td>
+                                <td class="flex">
+                                    <span class="grow">from <a href="/posts/<%= post.author_path %>"><em><%= post.author %></em></a> · <span class="date-relative"><%= post.timestamp %></span></span>
+                                    <a href="/reply/<%= post.path %>">reply</a>
+                                </td>
+                            </tr>
+                        </table>
+                        <% if (post.body != '') { %>
+                            <div class="content">
+                                <%- post.preview_body %>
+                                <% if (post.preview_body != post.body) { %>
+                                    <p class="read-more"><a href="/posts/<%= post.path %>">read more...</a></p>
+                                <% } %>
+                            </div>
+                        <% } %>
+                        <table>
+                            <% if (post.reply_count > 0) { %>
+                                <tr>
+                                    <td>
+                                        <a href="/posts/<%= post.path %>">
+                                            <%= post.reply_count %>
+                                            <% if (post.reply_count > 1) { %>
+                                                replies
+                                            <% } else { %> 
+                                                reply
+                                            <% } %>
+                                        </a>
+                                    </td>
+                                </tr>
+                            <% } %>
+                        </table>
+                    </div>
+                <% } %>
+            <% } %>
+        </main>
+    </div>
     
 </body>
 
 <script src="/js/post.js"></script>
-<script src="/js/index.js"></script>
 <script>
     treat_posts();
-    treat_index(document.querySelector(".posts-list"));
 </script>
 </html>
