--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -14,26 +14,28 @@
 
     <%- include('fragments/header.ejs')  %>
 
-    <main>
-        <div><%- title %></div>
-        <div class="posts-list">
-            <% for (let i=0; i<posts.length; i++) { %>
-                <% let post = posts[i] %>
-    
-                <div class="indexed-post">
-                    <span><%= posts.length - i %></span>
-                    <a class="title" href="/posts/<%= post.path %>">
-                        <%= post.title %>
-                    </a>
-                    <a style="white-space: pre" href="/posts/<%= post.author_path %>"><em><%= post.author %></em></a>
-                    <span class="date"><%= post.timestamp %></span>
-                </div>
+    <div class="scroll-container">
+        <main>
+            <div><%- title %></div>
+            <div class="posts-list">
+                <% for (let i=0; i<posts.length; i++) { %>
+                    <% let post = posts[i] %>
+        
+                    <div class="indexed-post">
+                        <span><%= posts.length - i %></span>
+                        <a class="title" href="/posts/<%= post.path %>">
+                            <%= post.title %>
+                        </a>
+                        <a style="white-space: pre" href="/posts/<%= post.author_path %>"><em><%= post.author %></em></a>
+                        <span class="date"><%= post.timestamp %></span>
+                    </div>
+                <% } %>
+            </div>
+            <% if (posts.length == 0) { %>
+                <p><i>zero posts to index!</i></p>
             <% } %>
-        </div>
-        <% if (posts.length == 0) { %>
-            <p><i>zero posts to index!</i></p>
-        <% } %>
-    </main>
+        </main>
+    </div>
     
 </body>
 
