--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -47,11 +47,11 @@ main:not(:has(footer)) {
     }
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
     :root {
         --bg: #1b1b1c;
         --color: #e8e8e8;
-        --theme-color: #4bb1f4;
+        --theme-color: #5ebfff;
         --post-bg: #1b1b1c;
         --post-border: rgba(255, 255, 255, .3);
         --normal-button-active-color: var(--post-border);
@@ -60,4 +60,4 @@ main:not(:has(footer)) {
     .doodle {
         filter: invert(.9);
     }
-} */
+}
