V1-08: dark mode, cont'd

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -56,6 +56,7 @@ dialog {
     padding: 1em;
     max-width: 15em;
     text-align: center;
+    background: var(--bg);
 }
 dialog::backdrop {
     background: rgba(255, 255, 255, .5);
