--- a/public/views/fragments/global-head.ejs
+++ b/public/views/fragments/global-head.ejs
@@ -1,5 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, viewport-fit=cover">
+<meta name="theme-color" content="white">
+<meta name="background-color" content="white">
 <link rel="manifest" href="/manifest.json" />
 <link rel="icon" type="image/png" href="/res/icons/32.png">
 <link rel="stylesheet" href="/css/global.css">
