--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -60,4 +60,8 @@ main:not(:has(footer)) {
     .doodle {
         filter: invert(.9);
     }
+
+    dialog::backdrop {
+        background: rgba(0, 0, 0, .5);
+    }
 }
