--- a/public/views/post.ejs
+++ b/public/views/post.ejs
@@ -14,7 +14,8 @@
             <% if (timestamp != -1) { %>
                 <% if (!locals.live || locals.live == false) { %>
                     <div class="post-not-live-banner">
-                        this post is being processed :)
+                        <em>this post is being processed :)</em><br>
+                        <span>you don't have to stay here, but the page will automatically refresh once your post is live.</span>
                     </div>
                 <% } %>
 
