--- a/public/css/new.css
+++ b/public/css/new.css
@@ -156,7 +156,9 @@ textarea {
     position: absolute;
     left: 1em;
     height: calc(100% - 1em);
-    width: unset;
+}
+.draw button img {
+    width: 100%;
 }
 
 .rec.recording .wrapper {
