--- a/public/css/post.css
+++ b/public/css/post.css
@@ -44,6 +44,10 @@ table .flex > *:last-child {
 .content {
     padding: 1em;
 }
+.content em {
+    font-style: italic;
+    font-weight: normal;
+}
 
 /* blocks */
 
